Changing link color and adding github/report links

--- a/Simple/resume.tex
+++ b/Simple/resume.tex
@@ -104,6 +104,7 @@ Program Analysis and Verification, Automated Debugging and Synthesis, \\Compiler
 
 \cusemph{Rohan Bavishi}, Awanish Pandey, Subhajit Roy, ``Regression Aware Debugging for Mobile Applications" to appear in \textit{Proceedings of the 1$^{st}$ International Workshop on Mobile Development} (Mobile! 2016, part of SPLASH 2016), Amsterdam, Netherlands
 
+\vspace{-2ex}
 \sectionline
 %-------------------------------------------------------------------------------
 %       AWARDS & ACHIEVEMENTS	
@@ -115,6 +116,7 @@ Secured an \cusemph{All-India-Rank of 202} in JEE Advanced 2013 amongst 150,000 
 Secured an \cusemph{All-India-Rank of 175} in JEE Mains 2013 amongst 20,00,000 candidates\\
 Secured an \cusemph{All-India-Rank of 33} in AMTI-Mathematics Olympiad
 
+\vspace{-2ex}
 \sectionline
 %-------------------------------------------------------------------------------
 
@@ -153,12 +155,15 @@ Secured an \cusemph{All-India-Rank of 33} in AMTI-Mathematics Olympiad
 \begin{project}
   \title{Implementation of DirectFix in CBMC}
   \supervisor{Supervisor : Prof. Subhajit Roy}
+  %\links{\href{https://github.com/rbavishi/iCBMC}{Github Link}}
   \duration{May '15 - Jul '15}
   \description{
 	- Ported the described \emph{Component-Based-Synthesis} algorithm in \href{https://www.comp.nus.edu.sg/~abhik/pdf/ICSE15-directfix.pdf}{DirectFix} to CBMC\\
 	- Reproduced the experimental results provided in the paper, and devised further optimizations\\
+	- \href{https://github.com/rbavishi/iCBMC}{Github Link}
   }
 \end{project}
+\vspace{-2ex}
 \sectionline
 %-------------------------------------------------------------------------------
 
@@ -174,7 +179,8 @@ Secured an \cusemph{All-India-Rank of 33} in AMTI-Mathematics Olympiad
 \description{
 	- Re-invented a two-pass \textit{deterministic} algorithm to find the median of large data-sets (approx. 1 TB)\\
 	- The algorithm developed was similar to the one described in the \href{http://polylogblog.files.wordpress.com/2009/08/80munro-median.pdf}{paper} by Munro-Paterson (1980)\\
-	- Carried out extensive tests to evaluate the performance of the algorithm
+	- Carried out extensive tests to evaluate the performance of the algorithm\\
+	- \href{https://drive.google.com/file/d/0B0--s-r8CTxgZTU3RzB3YnhMMVU/view}{Report}
 }
 \end{project}
 \begin{project}
@@ -185,9 +191,11 @@ Secured an \cusemph{All-India-Rank of 33} in AMTI-Mathematics Olympiad
 	- A linux application for backing-up and syncing files between two or more peers\\
 	- Users have a shared folder across different machines, with local copies. Changes made in any one copy are synced across all devices\\
 	- Linux \emph{inotify} API used to track changes in the shared folder and \emph{rsync} used to sync the modifications to ensure efficient transfer\\
-	- Multithreading with mutexes used to parallelize syncing and file-monitoring operations
+	- Multithreading with mutexes used to parallelize syncing and file-monitoring operations\\
+	- \href{https://github.com/rbavishi/P2P-Dropbox}{Github Link}
 }
 \end{project}
+\vspace{-2ex}
 \sectionline
 %-------------------------------------------------------------------------------
 
@@ -201,7 +209,8 @@ Secured an \cusemph{All-India-Rank of 33} in AMTI-Mathematics Olympiad
 \duration{Jan '15 - Apr '15}
 \description{
 	- Built an end-to-end compiler that takes a subset of the Perl language and outputs MIPS assembly\\
-	- Implemented Features such as \textit{operator overloading}, \textit{dynamic type-checking}, \textit{variable function arguments}, \textit{hashes}, \textit{lists}, \textit{type-based namespaces} etc.
+	- Implemented Features such as \textit{operator overloading}, \textit{dynamic type-checking}, \textit{variable function arguments}, \textit{hashes}, \textit{lists}, \textit{type-based namespaces} etc.\\
+	- \href{https://github.com/vaishious/comperler}{Github Link}
 }
 \end{project}
 \begin{project}
@@ -212,9 +221,11 @@ Secured an \cusemph{All-India-Rank of 33} in AMTI-Mathematics Olympiad
 	- Implemented a superscalar processor simulator based on the MIPS R10K architecture with support for integer instructions only\\
 	- Implemented support for Out-of-Order execution, multiple instruction issue and commit, precise interrupts and branch-misprediction rollback\\
 	- Configurable parameters supported such as issue width, number of functional units, branch-prediction algorithm, RAS/BTB size, active-list size etc.\\
-	- Performed experiments on various synthesized benchmarks to measure performance gains over an in-order processor design. Repeated the experiment with varying parameter configurations
+	- Performed experiments on various synthesized benchmarks to measure performance gains over an in-order processor design. Repeated the experiment with varying parameter configurations\\
+	- \href{https://drive.google.com/file/d/0B0--s-r8CTxgV21IYjJWTUJOdm8/view?usp=sharing}{Report}
 }
 \end{project}
+\vspace{-2ex}
 \sectionline
 %-------------------------------------------------------------------------------
 
@@ -228,7 +239,7 @@ Secured an \cusemph{All-India-Rank of 33} in AMTI-Mathematics Olympiad
 \\
 \cusemph{Research Tools}: CBMC (Proficient), KLEE, CSeq
 
-
+\vspace{-2ex}
 \sectionline
 %-------------------------------------------------------------------------------
 
